compiler/testData/diagnostics/tests/overload/ConflictingOverloadsFunsDifferentReturnInPackage.fir.kt
package qwertyuiop

fun <!CONFLICTING_OVERLOADS!>c<!>(s: String) {
}

fun <!CONFLICTING_OVERLOADS!>c<!>(s: String) {
}
